--- a/app/Resources/translations/validators.es.yml
+++ b/app/Resources/translations/validators.es.yml
@@ -1,5 +1,3 @@
 not_valid_mimetype_archive: No es un tipo de archivo válido.
 
-cashboxadjustment:
-  isEffectiveAmount: La sustracción de monto efectivo y monto efectivo real debe ser menor que el monto efectivo mínimo
-  isDepositAmount: La sustracción de monto depósito y monto depósito real debe ser menor que el monto depósito mínimo
+amounts.mismatch: La cantidad insertada no puede sobrepasar a la disponible.
